# theo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  check  pyproject.toml  worktree-add
.serena/: project.yml
docs/: API.md  ARCHITECTURE_DECISION.md  CORRUPTION_ROOT_CAUSE.md  architecture.md  migration.md
docs/plans/: agent-trace.yaml  sqlite-vec-migration.yaml  voice-transcription-mvp.yaml
hooks/: README.md  auto_commit.py  settings.example.json  theo-capture.py  theo-commit-hook.py  theo-compact.py  theo-context.py  theo-daemon-ctl.py  theo-daemon.py  theo-failure.py  theo-monitor.py  theo-notify.py  theo-permissions.py  theo-precontext.py  theo-prompt.py  theo-recall.py  theo-security.py  theo-session-start.py  theo-stop.py  theo-subagent.py  theo-track.py  theo_batcher.py  theo_client.py  theo_queue.py  theo_session_state.py  theo_worker.py
plans/: voice-transcription-mvp.yaml
scripts/: migrate_data.py  migrate_direct_sqlite.py  migrate_from_backup.py  migrate_recall_to_theo.py  migrate_to_sqlite_vec.py  test_voice_playback.py
skills/clean/: SKILL.md
skills/context/: SKILL.md
skills/contradictions/: SKILL.md
skills/forget/: SKILL.md
skills/graph/: SKILL.md
skills/health/: SKILL.md
skills/history/: SKILL.md
skills/index/: SKILL.md
skills/list/: SKILL.md
skills/recall/: SKILL.md
skills/relate/: SKILL.md
skills/search/: SKILL.md
skills/stats/: SKILL.md
skills/store/: SKILL.md
skills/validate/: SKILL.md
src/theo/: __init__.py  __main__.py  config.py  constants.py  mcp_server.py
src/theo/chunking/: __init__.py  base.py  code_chunker.py  markdown_chunker.py  pdf_chunker.py  registry.py  text_chunker.py
src/theo/daemon/: __init__.py  client.py  protocol.py  server.py  worker.py
src/theo/embedding/: __init__.py  factory.py  mlx_provider.py  ollama_provider.py  provider.py
src/theo/storage/: __init__.py  chroma_store.py  hybrid.py  sqlite_store.py  types.py
src/theo/tools/: __init__.py  indexing_tools.py  management_tools.py  memory_tools.py  query_tools.py
src/theo/transcription/: __init__.py  __main__.py  audio.py  audio_storage.py  storage.py  transcriber.py  tts.py  tui.py  types.py
src/theo/types/: __init__.py  document.py  memory.py  search_result.py
src/theo/validation/: __init__.py  feedback.py  golden_rules.py  loop.py
tests/: __init__.py  conftest.py  test_agent_trace.py  test_chroma_store.py  test_chunkers.py  test_daemon.py  test_embedding_provider.py  test_mcp_server.py  test_sqlite_store.py  test_types.py  test_validation.py
tests/integration/: __init__.py  test_daemon_integration.py  test_full_pipeline.py  test_mcp_tools.py
tests/transcription/: __init__.py  conftest.py  test_audio.py  test_storage.py  test_transcriber.py  test_types.py
