[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theo"
version = "0.3.0"
description = "Unified AI memory and document retrieval system - merging DocVec and Recall"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # MCP Protocol
    "mcp[cli]",
    # Vector Storage
    "sqlite-vec",
    # Embeddings - Apple Silicon optimized
    "mlx-embeddings",
    # HTTP & API
    "httpx",
    "requests",
    # Data Validation
    "pydantic",
    "pydantic-settings",
    # Document Processing
    "pypdf",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    # Code Quality
    "black",
    "ruff",
    "mypy",
    "isort",
    "types-requests",
    "pydocstyle",
]

[tool.hatch.build.targets.wheel]
packages = ["src/theo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "pypdf.*",
    "pydantic_settings",
    "mcp.*",
    "mlx_embeddings.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "chromadb>=1.4.1",
]
