[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theo"
version = "0.8.1"
description = "Unified AI memory and document retrieval system - merging DocVec and Recall"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # MCP Protocol
    "mcp[cli]",
    # Vector Storage
    "sqlite-vec",
    # Embeddings - Apple Silicon optimized
    "mlx-embeddings",
    # HTTP & API
    "httpx",
    "requests",
    # Data Validation
    "pydantic",
    "pydantic-settings",
    # Document Processing
    "pypdf",
    "python-dotenv",
    # Audio Processing
    "sounddevice",
    "soundfile",
    "scipy",
    "numpy",
    "mlx-audio",
    # TUI
    "rich",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    # Code Quality
    "black",
    "ruff",
    "mypy",
    "isort",
    "types-requests",
    "pydocstyle",
]

[tool.hatch.build.targets.wheel]
packages = ["src/theo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
markers = [
    "timeout: marks tests with a timeout (deselect with '-m \"not timeout\"')",
    "xdist_group: group tests for xdist parallel execution",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false  # Too noisy with MCP handlers returning Any
warn_unused_configs = true
strict = false
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "pypdf.*",
    "pydantic_settings",
    "mcp.*",
    "mlx_embeddings.*",
    "mlx.*",
    "mlx_audio.*",
    "sqlite_vec",
    "sounddevice",
    "soundfile",
    "scipy.*",
    "rich.*",
    "transformers",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "chromadb",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
